[package]
name = "server"
version = "0.2.5"
edition = "2021"

[dependencies]
salvo = "0"
tokio = { version = "1", features = ["macros"] }
time = { version = "0", features = ['macros'] }
tracing = { version = "0", features = ["log", "release_max_level_info"] }
tracing-subscriber = { version = "0", features = [
  'time',
  'env-filter',
  'json',
] }
tracing-appender = '0'
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = '1'
thiserror = "1"
sqlx = { version = "0", default-features = false, features = [
  "macros",
  "runtime-tokio",
  "sqlite",
  "time",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
