[package]
name = "server"
version = "0.2.6"
edition = "2021"

[dependencies]
salvo = { version = "0", default-features = false, features = [
  "server",
  "http1",
] }
tokio = { version = "1", default-features = false, features = ["macros"] }
time = { version = "0", default-features = false, features = ['macros'] }
tracing = { version = "0", default-features = false, features = [
  "log",
  "release_max_level_info",
] }
tracing-subscriber = { version = "0", default-features = false, features = [
  'time',
  'env-filter',
  'json',
] }
tracing-appender = { version = "0", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
sqlx = { version = "0", default-features = false, features = [
  "macros",
  "runtime-tokio",
  "sqlite",
  "time",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
